[workspace]
resolve = "3"
members = ["librustyfunds"]

[package]
name = "librustysigs"
authors = ["silene0259", "0x20CB", "DionysianMyst"]
description = "Rusty Signatures: A Secure Code Signing System"
keywords = ["rustysigs", "rustysignatures", "authentication", "certificate", "signing"]
categories = ["cryptography","command-line-utilities","authentication","rust-patterns","security"]
license = "Apache-2.0"
repository = "https://github.com/sileneundula/librustysigs"
homepage = "https://github.com/sileneundula/librustysigs"
version = "0.1.4"
edition = "2024"
readme = "README.md"

[dependencies]
# /silene/slug
libslug = "0.5.0"
slugencode = "0.1.0"
# Serde
serde = {version = "1.0.0", features=["derive"]}
serde_yaml = "=0.9.34"
# Zeroize
zeroize = "1.8.1"
# HashMap
hashbrown = "0.15.5"
# Time
chrono = {version = "0.4.41", features=["serde"]}

hex = "0.4.3"

# Certificate Format
cms = "0.2.3"
pem = "3.0.5"

bincode = "2.0.1"

toml = "0.9.5"

syn = "2.0.108"

nom = "8.0.0"

regex = "1.12.2"
